# CSC350_LVE

./: .gitignore  VulkanTest.sln
VulkanTest/: CMakeLists.txt  VulkanTest.vcxproj  VulkanTest.vcxproj.filters  compile.bat  first_app.cpp  first_app.hpp  image.txt  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.hpp  lve_window.cpp  lve_window.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp
VulkanTest/Animations/: Animation.cpp  Animation.h
VulkanTest/gameObjects/: Actor.cpp  Actor.h  MovingGameObject.cpp  MovingGameObject.h
VulkanTest/models/: Ch_Mai_95.dae  GrassBlade.mtl  Ground.mtl  Mai.mtl  dergen.mtl
VulkanTest/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
VulkanTest/systems/: point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
